Add AggregateRoot and ReadOnlyAggregate base classes for domain modeling; refactor Dictionary and Plan classes for improved structure and consistency